# tsample

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flatten_yaml.py  install.sh  sample.toml
.github/workflow/: release.yml
.github/workflows/: ci.yaml  release.yml
assets/: init.yaml  tsample.service
assets/debian/: postinst  postrm  prerm
config/: config.toml  config.yaml  config2.toml  cxsconfig.toml  sample.toml  simple.toml
deliverables/: Dockerfile
deliverables/docs/: illustration.graffle  install and configuration guide.docx  install and configuration guide.md
deliverables/mac/: config.toml
deliverables/redhat/: config.toml
deliverables/ubuntu/: config.toml  instruction.md  tsample.service
deliverables/windows/: config.toml
export/: EventProcessingSubsystem_Default.txt  StreamProcessingSubsystem_FirstInfluxDB.txt  StreamProcessingSubsystem_ThingworxPersistenceProvider.txt  ValueStreamProcessingSubsystem_FirstInfluxDB.txt  ValueStreamProcessingSubsystem_ThingworxPersistenceProvider.txt  system_records.csv  thingworx_records.csv
sampledata/: LastGcInfo_memoryUsageAfterGc.txt  LastGcInfo_memoryUsageBeforeGc.txt
src/: app.rs  influx.rs  jmxquery.rs  lib.rs  main.rs  model.rs  myinfluxdb.rs  payload.rs  prometheus.rs  sampling.rs  spec.rs  tabular.rs  testconfig.rs  thingworxjson.rs  thingworxtestconfig.rs  twxquery.rs
