[package]
name = "tsample"
version = "4.1.0"
authors = ["xudesheng <xudesheng@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tsample"
path = "src/main.rs"

[dependencies]
clap = "3.1"
log = "0.4"
env_logger = "0.7"
ctrlc = "3.2"

influxdb={ version = "0.5.2", features = ["derive"] }
serde = "1.0.104"
chrono = "0.4"

reqwest = {version = "0.11", features = ["json", "rustls-tls"], default-features = false}
tokio = { version = "1.17", features = ["full"] }
rustls = "0.20"

url = "2.2"
serde_json= "1.0.79"
anyhow = "1.0"
serde_yaml = "0.8"
evmap = "10.0.2"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
